# be_great

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
Exps/: GReat_exp3.ipynb  eva_metrics.py
Exps/Exp1-丢失数据与Max_length/: Exp1-main.py  plots.py
Exps/Exp2-输入数据不做任何处理/代码/: great-exp2.ipynb
about/: index.html
api-docs/: index.html
api-docs/great/: index.html
api-docs/great_dataset/: index.html
api-docs/great_start/: index.html
api-docs/great_trainer/: index.html
api-docs/great_utils/: index.html
be-great-v/: __init__.py  great_dataset.py  great_trainer.py
be_great/: great.py  great_dataset.py  great_old.py  great_start.py  great_trainer.py  great_utils.py
be_great.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
be_great_v/: great.py
docs/: .pages  about.md  getting_started.md  index.md
docs/api-docs/: .pages  README.md  great.md  great_dataset.md  great_start.md  great_trainer.md  great_utils.md
docs/examples/: .pages  Example_California_Housing.ipynb  Example_Iris.ipynb  README.md
examples/: Example_California_Housing.ipynb  Example_Iris.ipynb  Example_metrics.ipynb  GReaT_colab_example.ipynb  adult-dataset-full.ipynb  index.html  test_sample.py  test_train.py  utils.py
examples/Example_California_Housing/: index.html
examples/Example_Iris/: index.html
getting_started/: index.html
metrics/: __init__.py  base_metric.py  data_provider.py  discriminator_metric.py  dtcr_metric.py  mle_metric.py  nll_metric.py
search/: search_index.json
(+3 files in other folders)
